Fix: See full picture team on mobile

--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -46,13 +46,14 @@
 
       @media (max-width: $breakpoint-sm) {
         padding: 0;
+        grid-template-rows: auto 8rem auto;
       }
     }
 
     &-picture {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
       grid-column-start: 1;
       grid-column-end: span 2;
       grid-row-start: 1;
